; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_resume_np.c__pthread_resume_np.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_resume_np.c__pthread_resume_np.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pthread = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_pthread_resume_np(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pthread*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call %struct.pthread* (...) @_get_curthread()
  store %struct.pthread* %5, %struct.pthread** %3, align 8
  %6 = load %struct.pthread*, %struct.pthread** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @_thr_find_thread(%struct.pthread* %6, i32 %7, i32 0)
  store i32 %8, i32* %4, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @resume_common(i32 %11)
  %13 = load %struct.pthread*, %struct.pthread** %3, align 8
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @THR_THREAD_UNLOCK(%struct.pthread* %13, i32 %14)
  br label %16

16:                                               ; preds = %10, %1
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}

declare dso_local %struct.pthread* @_get_curthread(...) #1

declare dso_local i32 @_thr_find_thread(%struct.pthread*, i32, i32) #1

declare dso_local i32 @resume_common(i32) #1

declare dso_local i32 @THR_THREAD_UNLOCK(%struct.pthread*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
